--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <p class='paragraph-container'> Sed rhoncus cursus tellus nec tempor. Phasellus id est ullamcorper, venenatis nunc sed, efficitur magna. Vivamus nunc tortor, egestas quis mauris ac, consequat ultricies turpis. Aliquam erat volutpat. Proin euismod in metus sed sollicitudin. Vestibulum vel nunc sit amet arcu ullamcorper rutrum nec sit amet eros. Fusce blandit turpis vel erat ullamcorper aliquet. Maecenas convallis mauris felis, et consectetur elit tincidunt blandit.</p>
     </div>
     <div class='container-1'> 
-        <p> Hear Map </p> 
+        <p> Hear Map c</p> 
     </div>
 
 </body>
